k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-s
  name: myapp-s
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
