k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-d
  labels:
    app: myapp-d
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: yetoneya/myapp:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-s
  name: myapp-s
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30119
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-i
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-s
                port:
                  number: 8000
